@startuml

skinparam componentStyle uml2

package "'Person' Aggregate" <<Rectangle>> {
	class Person <<(A,#fffab8) Aggregate Root>> {
		String name
		Date birthDate
		PersonId id
		Cpf cpf
		Email contactEmail
	}
	class PersonId <<(V,DarkSeaGreen) Value Object>> {
		int id
	}
	class Cpf <<(V,DarkSeaGreen) Value Object>> {
		String cpf
	}
	class Email <<(V,DarkSeaGreen) Value Object>> {
		String emailText
	}
}
Person --> Email : contactEmail
Person --> PersonId : id
Person --> Cpf : cpf


@enduml
